--- a/account/templates/index.html
+++ b/account/templates/index.html
@@ -286,18 +286,15 @@ Header END -->
                                             <a href="#!"><img class="avatar-img rounded border border-white border-3"
                                                     src="{% static 'assets/images/avatar/0.jpg' %}" alt=""></a>
                                         </div>
-                                        <!-- Info -->
-                                        {% if user.is_authenticated %}
+									
                                         <div>
-                                            <a class="h6 stretched-link" href="#">{{user.username}}</a>
-                                            <!--<p class="small m-0">Web Developer</p>-->
+										{% if user.is_superuser %}
+											<a class="h6 stretched-link">{{ user.username }} &#x2714;</a>
+										{% else %}
+											<a class="h6 stretched-link">{{ user.username }}</a>
+										{% endif %}
                                         </div>
-                                        {% else %}
-                                        <div>
-                                            <a class="h6 stretched-link" href="#">Hoş Geldiniz</a>
-                                            <!--<p class="small m-0">Web Developer</p>-->
-                                        </div>
-                                        {% endif %}
+								
                                         <p class="mt-3">-_-</p>
                                     </div>
                                 </div>
@@ -342,25 +339,35 @@ Header END -->
                     </div>
                     {% endif %}
                 </div>
-                {% if user.is_authenticated %}
                 <div class="post-list">
                     {% for post in posts %}
                     <div class="card mb-3">
-                        <div class="card-body">
+						<div class="card-body">
 							<div class="avatar">
 								<a href="/profile/{{ post.user.username }}">
 									<img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt="">
 								</a>
-								<h6 class="card-title"><a href="/profile/{{post.user.username}}">{{ post.user.username }}</a></h6>
-							</div>							
-                            <h6 class="card-title">{{ post.title }}</h6>
-                            <p class="small mb-0">{{ post.content }}</p>
-                            <p class="small mb-0">Tarih: {{ post.created_at }}</p>
-                        </div>
-                    </div>
+							</div>
+							<div>
+								{% if post.user.is_superuser %}
+									<span class="h6 stretched-link">
+										<a href="/profile/{{post.user.username}}">{{ post.user.username }} &#x2714;</a>
+									</span>
+								{% else %}
+									<h6 class="card-title">
+										<a href="/profile/{{post.user.username}}">{{ post.user.username }}</a>
+									</h6>
+								{% endif %}
+							</div>   
+							<h6 class="card-title">{{ post.title }}</h6>
+							<p class="small mb-0">{{ post.content }}</p>
+							<p class="small mb-0">Tarih: {{ post.created_at }}</p>
+						</div>
+					</div>
+					
                     {% endfor %}
                 </div>
-                {% endif %}
+
             </div>
             <!-- Main content END -->
             <!-- Right sidebar START -->
