--- a/account/templates/user-profile.html
+++ b/account/templates/user-profile.html
@@ -149,21 +149,6 @@ Header START -->
 					</a>
           <ul class="dropdown-menu dropdown-animation dropdown-menu-end pt-3 small me-md-n3" aria-labelledby="profileDropdown">
             <!-- Profile info -->
-            <li class="px-3">
-              <div class="d-flex align-items-center position-relative">
-                <!-- Avatar -->
-                <div class="avatar me-3">
-                  <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt="avatar">
-                </div>
-                <div>
-                  <div>	
-                    <a class="h6 stretched-link" href="#">{{profile_user.username}}</a>
-                    <!--<p class="small m-0">Web Developer</p>-->
-                  </div>
-
-                </div>
-              </div>
-            </li>
             <!-- Links -->
             <li> 
               <a class="dropdown-item" href="error" target="_blank">
@@ -243,18 +228,15 @@ Header END -->
                           <!-- Info -->
                           <div>
                               <h1 class="mb-0 h5">{{ profile_user.username }}<i class="bi bi-patch-check-fill text-success small"></i></h1>
+                              <ul class="list-unstyled mb-0 mt-3 mt-sm-0">
+                                <li class="mb-2"><i class="bi bi-geo-alt me-1"></i></li>
+      
+                                <li class="mb-2"><i class="bi bi-calendar2-plus me-1"></i> Kayıt Tarihi: {{profile_user.date_joined|date:"F d, Y"}}</li>
+                            </ul>
                           </div>
                           <!-- Button -->
-                          <div class="d-flex mt-3 justify-content-center ms-sm-auto">
-                              <button class="btn btn-danger-soft me-2" type="button"> <i class="bi bi-pencil-fill pe-1"></i>Profilini Düzenle </button>
-                          </div>
                       </div>
                       <!-- List profile -->
-                      <ul class="list-unstyled mb-0 mt-3 mt-sm-0">
-                          <li class="mb-2"><i class="bi bi-geo-alt me-1"></i></li>
-                          <li class="mb-2"><i class="bi bi-geo-alt me-1"></i>Kahramanmaraş</li>
-                          <li class="mb-2"><i class="bi bi-calendar2-plus me-1"></i> Kayıt Tarihi: {{profile_user.date_joined}}</li>
-                      </ul>
                   </div>
               </div>
               <!-- Card body END -->
