--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -113,7 +113,7 @@
 			{% csrf_token %}
 			<!-- Email -->
 			<div class="mb-3 input-group-lg">
-				<input type="text" name="username" class="form-control" placeholder="username" required>
+				<input type="text" name="username" class="form-control" placeholder="Kullanıcı adınızı giriniz..." required>
 			</div>
 			<!-- Password -->
 			<div class="mb-3 position-relative">
